# mymcp

./: README.md  index.js  package.json  pnpm-lock.yaml
js-mcp/: README.md  client.js  log.txt  package.json  pnpm-lock.yaml
js-mcp/test-mcp/: client.js  server.js
python-mcp/: pyproject.toml  server.py
