[project]
name = "python-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<=3.13"
dependencies = [
    "aiohttp>=3.11.17",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "mcp[cli]>=1.3.0",
    "mem0ai>=0.1.88",
    "python-dotenv>=1.1.0",
    "vecs>=0.4.5",
]
